finished creating the static mobile view of the header, hero and search bar components moving on to the Main body of the application

--- a/src/index.css
+++ b/src/index.css
@@ -1,8 +1,6 @@
 @import "tailwindcss";
 
 * {
-  padding: 0;
-  margin: 0;
   box-sizing: border-box;
 }
 
@@ -10,38 +8,39 @@
   font-family: "BricolageGrotesque-Bold";
   font-display: swap;
   src: url("./assets/fonts/Bricolage_Grotesque/static/BricolageGrotesque-Bold.ttf")
-    format("ttf");
+    format("truetype");
 }
 
 @font-face {
   font-family: "DMSans-SemiBoldItalic";
   font-display: swap;
   src: url("./assets/fonts/DM_Sans/static/DMSans-SemiBoldItalic.ttf")
-    format("ttf");
+    format("truetype");
 }
 
 @font-face {
   font-family: "DMSans-Light";
   font-display: swap;
-  src: url("./assets/fonts/DM_Sans/static/DMSans-Light.ttf") format("ttf");
+  src: url("./assets/fonts/DM_Sans/static/DMSans-Light.ttf") format("truetype");
 }
 
 @font-face {
   font-family: "DMSans-Bold";
   font-display: swap;
-  src: url("./assets/fonts/DM_Sans/static/DMSans-Bold.ttf") format("ttf");
+  src: url("./assets/fonts/DM_Sans/static/DMSans-Bold.ttf") format("truetype");
 }
 
 @font-face {
   font-family: "DMSans-SemiBold";
   font-display: swap;
-  src: url("./assets/fonts/DM_Sans/static/DMSans-SemiBold.ttf") format("ttf");
+  src: url("./assets/fonts/DM_Sans/static/DMSans-SemiBold.ttf")
+    format("truetype");
 }
 
 @font-face {
   font-family: "DMSans-Medium";
   font-display: swap;
-  src: url("./assets/fonts/DM_Sans/static/DMSans-Medium.ttf") format("ttf");
+  src: url("./assets/fonts/DM_Sans/static/DMSans-Medium.ttf") format("truetype");
 }
 
 @theme {
